[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wastelandhub"
version = "0.1.0"
description = "RobCo terminal inspired program for managing Wasteland Hub services."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "textual>=0.53.0",
]

[project.scripts]
wastelandhub = "wastelandhub.main:main"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.14.1",
    "textual-dev>=1.8.0",
]

[tool.ruff]
line-length = 88
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
